# rustygene

./: .gitignore  .redocly.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  clippy_warnings.txt  manifest  srkiddta6prfcetqkhpiejb5svqig8su.darc
.beads/: metadata.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts  vitest.setup.ts
app/e2e/: families-persons-smoke.spec.ts
app/src/: app.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  main.rs  state.rs
app/src/lib/: api.ts  graphMerge.test.ts  importWizard.test.ts  importWizard.ts  sourceDrivenWorkflow.integration.test.ts  sourceDrivenWorkflow.ts  state.svelte.ts  state.test.ts
app/src/lib/charts/: ancestorStore.ts
app/src/lib/components/: AssertionList.svelte  BreadcrumbTrail.svelte  CitationDetail.svelte  CitationPicker.svelte  EventForm.svelte  EvidenceTracePanel.svelte  FamilyForm.svelte  NoteList.svelte  PersonForm.svelte  RelatedRecordsGraph.svelte  Sidebar.svelte  Toolbar.svelte  formTypes.ts
app/src/routes/: +error.svelte  +layout.svelte  +page.svelte
app/src/routes/backup/: +page.svelte
app/src/routes/charts/fan/: +page.svelte
app/src/routes/charts/graph/: +page.svelte
app/src/routes/charts/pedigree/: +page.svelte
app/src/routes/citations/[id]/: +page.svelte
app/src/routes/debug/: +page.svelte
app/src/routes/entry/source-driven/: +page.svelte
app/src/routes/events/: +page.svelte
app/src/routes/events/[id]/: +page.svelte
app/src/routes/export/: +page.svelte
app/src/routes/families/: +page.svelte
app/src/routes/families/[id]/: +page.svelte
app/src/routes/import/: +page.svelte
app/src/routes/import/merge/: +page.svelte
app/src/routes/media/: +page.svelte
app/src/routes/media/[id]/view/: +page.svelte
app/src/routes/persons/: +page.svelte
app/src/routes/persons/[id]/: +page.svelte
app/src/routes/relationship-calculator/: +page.svelte
app/src/routes/repositories/: +page.svelte
app/src/routes/repositories/[id]/: +page.svelte
app/src/routes/research-log/: +page.svelte
app/src/routes/sandboxes/: +page.svelte
app/src/routes/search/: +page.svelte
app/src/routes/sources/: +page.svelte
app/src/routes/sources/[id]/: +page.svelte
app/src/routes/staging/: +page.svelte
app/src/styles/: global.css  tokens.css
app/src/types/: cytoscape-plugins.d.ts
crates/api/: Cargo.toml
crates/api/src/: errors.rs  lib.rs  openapi.rs
crates/api/src/models/: events.rs  families.rs  graph.rs  mod.rs  persons.rs
crates/api/src/routes/: assertions.rs  backup.rs  citations.rs  debug.rs  events.rs  events_sse.rs  families.rs  graph.rs  import_export.rs  media.rs  mod.rs  notes.rs  persons.rs  places.rs  repositories.rs  research_log.rs  sandboxes.rs  search.rs  sources.rs  staging.rs
crates/api/tests/: debug_test.rs  events_test.rs  evidence_test.rs  families_test.rs  full_api_integration_test.rs  gedcom_property_harness_test.rs  graph_test.rs  health_test.rs  import_export_test.rs  media_test.rs  openapi_test.rs  performance_smoke_test.rs  persons_test.rs  places_test.rs  ready_test.rs  search_test.rs  source_driven_citation_link_test.rs  sse_test.rs  staging_research_log_test.rs
crates/api/tests/common/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: gramps.rs  main.rs
crates/cli/tests/: cli_usability_test.rs
crates/core/: Cargo.toml
crates/core/src/: assertion.rs  event.rs  evidence.rs  family.rs  kinship.rs  lds.rs  lib.rs  person.rs  place.rs  research.rs  types.rs  validation.rs
crates/core/tests/: property_based.rs
crates/gedcom/: Cargo.toml
crates/gedcom/src/: diff.rs  lib.rs  matching.rs
crates/gedcom/tests/: asso_assoc_roundtrip_test.rs  citation_roundtrip_test.rs  corpus_roundtrip_test.rs  diff_test.rs  e2e_gate_test.rs  matching_test.rs  name_type_chan_head_regression_test.rs  note_ref_test.rs  obje_media_ref_test.rs  torture551_tag_accounting_test.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: V001__initial_schema.sql  V002__add_lds_ordinances_table.sql  V003__split_families_and_relationships.sql  V004__person_generated_query_columns.sql  V005__add_staging_queue_table.sql
crates/storage/src/: lib.rs  sqlite_impl.rs
crates/storage/tests/: integration_storage.rs
docs/: ARCHITECTURE.md  DECISIONS.md  GEDCOM_GAPS.md  INITIAL_SPEC.md  PHASE_1A_REVIEW.md  PHASE_2_REVIEW.md  TESTING_TIMEOUT_GUIDELINES.md  UI_STYLE_CHECKLIST.md  UX_QUALITY_GATES.md
spec/: openapi.json
testdata/gedcom/: ancestry_sample.ged  gramps_sample.ged  kennedy.ged  legacy_sample.ged  paf_sample.ged  rootsmagic_sample.ged  vendor_metadata_sample.ged
