[package]
name = "rustygene-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rusqlite = "0.33"
dirs = "6"
rfd = "0.15"
tracing = "0.1"
rustygene-api = { path = "../../crates/api" }
rustygene-storage = { path = "../../crates/storage" }
rustygene-core = { path = "../../crates/core" }
chrono = "0.4"
