[package]
name = "rustygene-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
utoipa = { version = "5", features = ["axum_extras"] }
rustygene-core = { path = "../core" }
rustygene-storage = { path = "../storage" }
rustygene-gedcom = { path = "../gedcom" }

[dev-dependencies]
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = "0.33"
