[package]
name = "rustygene-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
rustygene-core = { version = "0.1.0", path = "../core" }
rustygene-storage = { version = "0.1.0", path = "../storage" }
serde_json = "1.0.149"
tokio = { version = "1.0", features = ["rt", "time"] }
