[package]
name = "rustygene-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
rustygene-core = { version = "0.1.0", path = "../core" }
rustygene-gedcom = { version = "0.1.0", path = "../gedcom" }
rustygene-storage = { version = "0.1.0", path = "../storage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.0", features = ["rt", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
xmltree = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
