[package]
name = "rustygene-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
uuid = { version = "1.23.0", features = ["v4", "serde"] }

[dev-dependencies]
proptest = "1.6.0"
