[package]
name = "rustygene-gedcom"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["v5", "serde"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
rustygene-core = { version = "0.1.0", path = "../core" }
rustygene-storage = { version = "0.1.0", path = "../storage" }
