[package]
name = "rustygene-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
refinery = { version = "0.8.16", features = ["rusqlite"] }
rusqlite = { version = "0.33.0", features = ["bundled", "backup"] }
rustygene-core = { version = "0.1.0", path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
